--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script defer src="https://kit.fontawesome.com/63d5fee9e4.js" crossorigin="anonymous"></script>
     <title>Educa</title>
   </head>
   <body class="font-poppins">
